src/gwt/public/global/gwt.css
/* ... */
.clickBox .Name {
  font-size: 14px;
  padding-top: 5px;
}

.memberStatus {
  font-size: 14px;
}

.flashLink {
  color: white;
  background-color: black;
}

.flashLink a {
  color: white;
  border: 0;
}

.flashLink a:visited {
  color: white;
  border: 0;
}

.flashLink img {
  border: 0;
}

/** SearchBox styles */
.searchBox {
  border: 1px solid black;
  background: #E9F6FB;
  padding: 0px 2px;
}

.searchBox .gwt-TextBox {
  border: none;
}

.searchBox .Faded {
  color: #AAAAAA;
}

.searchBox .closeButton {
  margin-top: 3px;
}

/** Marquee styles */
.marquee {
  background: url(/images/ui/marquee_tile.png) repeat-x top;
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
  font-size: 24px;
  font-weight: bold;
  color: white;
  height: 38px;
  text-align: center;
  padding-top: 8px;
  white-space: nowrap;
}

.CommentsPanel .messagePanel {
  padding: 0px;
}

.CommentsPanel .messagePanel .Photo {
  padding: 1px;
}

.CommentsPanel .messagePanel .Text {
  font-size: 12px;
}

.CommentsPanel .emphasized .Scroller {
  color: green;
}

.CommentsPanel .messagePanel .MsgInfo {
  padding-top: 1px;
}

.CommentsPanel .messagePanel .Tools {
  padding-top: 1px;
}

.CommentsPanel .messagePanel .Author {
  font-size: 11px;
}

.CommentsPanel .messagePanel .Posted {
  font-size: 11px;
}

.PostComment {
  padding: 15px 15px 0px 15px;
}

/** MessagePanel styles */
.messagePanel .Photo {
  background: #EDEDED;
  padding: 5px;
}

.messagePanel .Photo .caption {
  font-size: 11px;
}

.messagePanel .MsgInfo {
  padding-top: 5px;
}

.messagePanel .Tools {
  padding-top: 5px;
  text-align: right;
}

.messagePanel .Author {
  font-weight: bold;
  font-size: 12px;
}

.messagePanel .Icon, .messagePanel .ActionIcon {
  vertical-align: middle;
  display: inline;
}

.messagePanel .Icon {
  margin-right: 5px;
}

.messagePanel .ActionIcon {
  margin-left: 5px;
}

.messagePanel .Posted {
  font-size: 12px;
  color: #999999;
}

.messagePanel .Scroller {
  width: 565px;
}

.messagePanel .Text {
  padding: 5px 5px 0px 0px;
  vertical-align: top;
}

.messagePanel .LeftPad {
  padding-left: 10px;
}

.messagePanel .RightPad {
  padding-right: 10px;
}

.messagePanel .BottomPad {
  padding-bottom: 5px;
}

.thingBox {
  display: table;
  text-align: center;
}

.thingBox img {
  border: 0px;
  margin-left: auto;
  margin-right: auto;
}

/** ComplainPopup styles */
.complainPopup {
  width: 400px;
}

/** Place <div style="clear"/> to force a line break after floating elements */
.clear {
  clear: both;
}

/** Go go speed racer. */
.GoButton {
  width: 40px;
  height: 17px;
  background-image: url(/images/ui/go_up.png);
}

.GoButton-up-hovering {
  background-image: url(/images/ui/go_over.png);
}

.GoButton-down-hovering {
  background-image: url(/images/ui/go_down.png);
}

.stretchButton {
  cursor: pointer;
}

.stretchButton .X {
  white-space: nowrap;
}

.orangeThick, .blueThick {
  color: white;
  font-weight: bold;
  font-size: 28px;
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
}

.orangeThin, .blueThin {
  color: white;
  font-weight: bold;
  font-size: 15px;
  font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
}

.stretchButton-small .buyButton .X {
  width: 80px;
}

.stretchButton-small .orangeThick,
.stretchButton-small .blueThick {
  font-size: 15px;
}

.orangeThick .W, .orangeThick .E, .blueThick .W, .blueThick .E {
  width: 36px;
}

.orangeThin .W, .orangeThin .E, .blueThin .W, .blueThin .E {
  width: 24px;
}

/** THICK ORANGE BUTTON */

.orangeThick .W {
  background-image: url(/images/ui/button/orange_thick_left.png);
}

.orangeThick .X {
  background-image: url(/images/ui/button/orange_thick_center.png);
  height: 44px;
}

.orangeThick .E {
  background-image: url(/images/ui/button/orange_thick_right.png);
  background-position: right;
}

.orangeThick-up-hovering .W {
  background-image: url(/images/ui/button/orange_thick_left_over.png);
}

.orangeThick-up-hovering .X {
  background-image: url(/images/ui/button/orange_thick_center_over.png);
}

.orangeThick-up-hovering .E {
  background-image: url(/images/ui/button/orange_thick_right_over.png);
  background-position: right;
}

.orangeThick-down-hovering .W {
  background-image: url(/images/ui/button/orange_thick_left_down.png);
}

.orangeThick-down-hovering .X {
  background-image: url(/images/ui/button/orange_thick_center_down.png);
}

.orangeThick-down-hovering .E {
  background-image: url(/images/ui/button/orange_thick_right_down.png);
  background-position: right;
}

/** THIN BLUE BUTTON */

.blueThin .W {
  background-image: url(/images/ui/button/blue_thin_left.png);
}

.blueThin .X {
  background-image: url(/images/ui/button/blue_thin_center.png);
  height: 29px;
}

.blueThin .E {
  background-image: url(/images/ui/button/blue_thin_right.png);
  background-position: right;
}

.blueThin-up-hovering .W {
  background-image: url(/images/ui/button/blue_thin_left_over.png);
}

.blueThin-up-hovering .X {
  background-image: url(/images/ui/button/blue_thin_center_over.png);
}

.blueThin-up-hovering .E {
  background-image: url(/images/ui/button/blue_thin_right_over.png);
  background-position: right;
}

.blueThin-down-hovering .W {
  background-image: url(/images/ui/button/blue_thin_left_down.png);
}

.blueThin-down-hovering .X {
  background-image: url(/images/ui/button/blue_thin_center_down.png);
}

.blueThin-down-hovering .E {
  background-image: url(/images/ui/button/blue_thin_right_down.png);
  background-position: right;
}

/* ------------------------------------
   CONTEST BOX
-------------------------------------*/

.contestBox {
  width: 600px;
  background-color: #FFFFFF;
  padding: 10px;
  margin-bottom: 10px;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 13px;
}

.contestBox .Icon {
  width: 80px;
}

.contestBox .ContestInfo {
  width: 360px;
  overflow: hidden;
  margin: 0 10px;
}
/* ... */

